implemented WL based prediction

--- a/DeepIE3D_Backend/networkx_ex.ipynb
+++ b/DeepIE3D_Backend/networkx_ex.ipynb
@@ -187,6 +187,7 @@
    "source": [
     "import networkx as nx\n",
     "from IPython.display import SVG, display\n",
+    "import grakel\n",
     "\n",
     "G = nx.DiGraph()\n",
     "nx.add_path(G, [3, 5, 4, 1, 0, 2, 7, 8, 9, 6])\n",
