GA based parameter

--- a/DeepIE3D_Backend/graph_ex.ipynb
+++ b/DeepIE3D_Backend/graph_ex.ipynb
@@ -10,60 +10,164 @@
      "output_type": "stream",
      "text": [
       "/home/ibalab/anaconda3/bin/python\n",
-      "[[1.         0.7544073  0.77319124 0.77173056 0.73723544 0.77258939\n",
-      "  0.77403989 0.76378513 0.76693594 1.         0.7544073  0.77319124\n",
-      "  0.77173056 0.73723544 0.77258939 0.77403989 0.76378513 0.76693594]\n",
-      " [0.7544073  1.         0.74401787 0.77035731 0.70961986 0.75207111\n",
-      "  0.75287926 0.76415943 0.7734651  0.7544073  1.         0.74401787\n",
-      "  0.77035731 0.70961986 0.75207111 0.75287926 0.76415943 0.7734651 ]\n",
-      " [0.77319124 0.74401787 1.         0.71526499 0.79437025 0.73250481\n",
-      "  0.75378711 0.72890227 0.76341891 0.77319124 0.74401787 1.\n",
-      "  0.71526499 0.79437025 0.73250481 0.75378711 0.72890227 0.76341891]\n",
-      " [0.77173056 0.77035731 0.71526499 1.         0.68896256 0.77219653\n",
-      "  0.73990149 0.78723005 0.76299389 0.77173056 0.77035731 0.71526499\n",
-      "  1.         0.68896256 0.77219653 0.73990149 0.78723005 0.76299389]\n",
-      " [0.73723544 0.70961986 0.79437025 0.68896256 1.         0.69106525\n",
-      "  0.71908756 0.69296649 0.75034569 0.73723544 0.70961986 0.79437025\n",
-      "  0.68896256 1.         0.69106525 0.71908756 0.69296649 0.75034569]\n",
-      " [0.77258939 0.75207111 0.73250481 0.77219653 0.69106525 1.\n",
-      "  0.76808759 0.75472549 0.75749318 0.77258939 0.75207111 0.73250481\n",
-      "  0.77219653 0.69106525 1.         0.76808759 0.75472549 0.75749318]\n",
-      " [0.77403989 0.75287926 0.75378711 0.73990149 0.71908756 0.76808759\n",
-      "  1.         0.72467364 0.75613605 0.77403989 0.75287926 0.75378711\n",
-      "  0.73990149 0.71908756 0.76808759 1.         0.72467364 0.75613605]\n",
-      " [0.76378513 0.76415943 0.72890227 0.78723005 0.69296649 0.75472549\n",
-      "  0.72467364 1.         0.74711111 0.76378513 0.76415943 0.72890227\n",
-      "  0.78723005 0.69296649 0.75472549 0.72467364 1.         0.74711111]\n",
-      " [0.76693594 0.7734651  0.76341891 0.76299389 0.75034569 0.75749318\n",
-      "  0.75613605 0.74711111 1.         0.76693594 0.7734651  0.76341891\n",
-      "  0.76299389 0.75034569 0.75749318 0.75613605 0.74711111 1.        ]\n",
-      " [1.         0.7544073  0.77319124 0.77173056 0.73723544 0.77258939\n",
-      "  0.77403989 0.76378513 0.76693594 1.         0.7544073  0.77319124\n",
-      "  0.77173056 0.73723544 0.77258939 0.77403989 0.76378513 0.76693594]\n",
-      " [0.7544073  1.         0.74401787 0.77035731 0.70961986 0.75207111\n",
-      "  0.75287926 0.76415943 0.7734651  0.7544073  1.         0.74401787\n",
-      "  0.77035731 0.70961986 0.75207111 0.75287926 0.76415943 0.7734651 ]\n",
-      " [0.77319124 0.74401787 1.         0.71526499 0.79437025 0.73250481\n",
-      "  0.75378711 0.72890227 0.76341891 0.77319124 0.74401787 1.\n",
-      "  0.71526499 0.79437025 0.73250481 0.75378711 0.72890227 0.76341891]\n",
-      " [0.77173056 0.77035731 0.71526499 1.         0.68896256 0.77219653\n",
-      "  0.73990149 0.78723005 0.76299389 0.77173056 0.77035731 0.71526499\n",
-      "  1.         0.68896256 0.77219653 0.73990149 0.78723005 0.76299389]\n",
-      " [0.73723544 0.70961986 0.79437025 0.68896256 1.         0.69106525\n",
-      "  0.71908756 0.69296649 0.75034569 0.73723544 0.70961986 0.79437025\n",
-      "  0.68896256 1.         0.69106525 0.71908756 0.69296649 0.75034569]\n",
-      " [0.77258939 0.75207111 0.73250481 0.77219653 0.69106525 1.\n",
-      "  0.76808759 0.75472549 0.75749318 0.77258939 0.75207111 0.73250481\n",
-      "  0.77219653 0.69106525 1.         0.76808759 0.75472549 0.75749318]\n",
-      " [0.77403989 0.75287926 0.75378711 0.73990149 0.71908756 0.76808759\n",
-      "  1.         0.72467364 0.75613605 0.77403989 0.75287926 0.75378711\n",
-      "  0.73990149 0.71908756 0.76808759 1.         0.72467364 0.75613605]\n",
-      " [0.76378513 0.76415943 0.72890227 0.78723005 0.69296649 0.75472549\n",
-      "  0.72467364 1.         0.74711111 0.76378513 0.76415943 0.72890227\n",
-      "  0.78723005 0.69296649 0.75472549 0.72467364 1.         0.74711111]\n",
-      " [0.76693594 0.7734651  0.76341891 0.76299389 0.75034569 0.75749318\n",
-      "  0.75613605 0.74711111 1.         0.76693594 0.7734651  0.76341891\n",
-      "  0.76299389 0.75034569 0.75749318 0.75613605 0.74711111 1.        ]]\n"
+      "tensor([[[[[8.3004e-03, 3.1148e-04, 5.6760e-04,  ..., 9.9000e-05,\n",
+      "            3.3750e-04, 1.2806e-02],\n",
+      "           [4.5709e-04, 6.9301e-06, 2.1258e-05,  ..., 9.9489e-07,\n",
+      "            4.3577e-06, 5.8360e-04],\n",
+      "           [3.3598e-04, 2.1117e-06, 9.3558e-06,  ..., 4.2590e-07,\n",
+      "            3.4723e-06, 2.9791e-04],\n",
+      "           ...,\n",
+      "           [1.1336e-04, 1.4299e-07, 7.3709e-07,  ..., 9.8728e-08,\n",
+      "            4.5503e-07, 1.4863e-04],\n",
+      "           [1.5020e-04, 1.5136e-07, 7.5892e-07,  ..., 2.1798e-07,\n",
+      "            1.4774e-06, 1.4226e-04],\n",
+      "           [2.6609e-03, 5.4228e-05, 5.7402e-05,  ..., 1.9232e-04,\n",
+      "            1.8135e-04, 9.5398e-03]],\n",
+      "\n",
+      "          [[3.9057e-04, 1.1309e-06, 6.7641e-06,  ..., 1.4010e-06,\n",
+      "            4.2060e-06, 3.9254e-04],\n",
+      "           [3.2838e-06, 6.8250e-09, 1.5575e-08,  ..., 2.4215e-09,\n",
+      "            3.7748e-09, 3.6128e-06],\n",
+      "           [2.6361e-06, 2.2717e-09, 6.4921e-09,  ..., 7.5241e-11,\n",
+      "            8.6702e-10, 2.2703e-06],\n",
+      "           ...,\n",
+      "           [6.5602e-07, 3.5791e-11, 2.5839e-10,  ..., 5.8535e-12,\n",
+      "            6.3767e-12, 3.9920e-07],\n",
+      "           [1.6116e-06, 2.5756e-10, 1.9333e-09,  ..., 4.0096e-12,\n",
+      "            1.5348e-10, 6.0280e-07],\n",
+      "           [5.8236e-05, 1.7972e-07, 2.7251e-07,  ..., 2.0761e-07,\n",
+      "            6.3617e-07, 3.7846e-04]],\n",
+      "\n",
+      "          [[1.3830e-04, 3.9663e-07, 2.5260e-06,  ..., 2.3893e-06,\n",
+      "            5.1718e-06, 3.6725e-04],\n",
+      "           [1.7778e-06, 1.6344e-09, 3.1473e-09,  ..., 3.8607e-09,\n",
+      "            4.2745e-09, 4.2711e-06],\n",
+      "           [2.1507e-06, 2.6568e-10, 1.3593e-09,  ..., 1.5410e-10,\n",
+      "            4.2319e-10, 1.0146e-06],\n",
+      "           ...,\n",
+      "           [4.6012e-07, 2.3508e-11, 2.9614e-10,  ..., 1.3251e-12,\n",
+      "            4.8553e-13, 5.6561e-08],\n",
+      "           [1.0667e-06, 1.1712e-10, 1.5586e-09,  ..., 5.1561e-13,\n",
+      "            4.9355e-12, 9.5046e-08],\n",
+      "           [3.9907e-05, 1.3747e-07, 3.0002e-07,  ..., 3.9000e-08,\n",
+      "            1.3429e-07, 1.3920e-04]],\n",
+      "\n",
+      "          ...,\n",
+      "\n",
+      "          [[1.2546e-04, 1.7667e-07, 4.4614e-07,  ..., 4.3280e-07,\n",
+      "            3.3084e-06, 6.2953e-04],\n",
+      "           [6.6825e-07, 1.4865e-10, 2.1005e-10,  ..., 1.8893e-09,\n",
+      "            1.6371e-08, 1.3057e-05],\n",
+      "           [3.3199e-07, 8.5000e-12, 1.4116e-11,  ..., 2.7266e-11,\n",
+      "            9.5781e-10, 5.8454e-06],\n",
+      "           ...,\n",
+      "           [8.2374e-06, 1.5351e-09, 2.1724e-10,  ..., 3.6732e-12,\n",
+      "            9.0690e-13, 2.5326e-08],\n",
+      "           [1.3495e-05, 3.0569e-09, 5.1261e-10,  ..., 4.6776e-12,\n",
+      "            5.5058e-12, 6.3130e-08],\n",
+      "           [1.8400e-04, 3.0224e-07, 9.9148e-08,  ..., 6.5614e-07,\n",
+      "            7.0767e-07, 1.4491e-04]],\n",
+      "\n",
+      "          [[2.0039e-04, 2.1043e-07, 8.1969e-07,  ..., 6.3860e-07,\n",
+      "            4.5350e-06, 5.1191e-04],\n",
+      "           [1.4108e-06, 1.8022e-10, 5.4770e-10,  ..., 4.2524e-09,\n",
+      "            1.2023e-08, 1.9627e-05],\n",
+      "           [1.0165e-06, 2.3036e-11, 3.2091e-11,  ..., 1.2164e-10,\n",
+      "            2.5996e-09, 3.8584e-06],\n",
+      "           ...,\n",
+      "           [8.6408e-06, 4.0591e-09, 1.9443e-09,  ..., 1.1576e-10,\n",
+      "            1.7556e-11, 7.9944e-08],\n",
+      "           [1.2372e-05, 5.4524e-09, 2.1547e-09,  ..., 5.9939e-11,\n",
+      "            1.1478e-10, 1.0481e-07],\n",
+      "           [2.5698e-04, 9.3418e-07, 5.0770e-07,  ..., 1.6900e-06,\n",
+      "            1.8717e-06, 1.4994e-04]],\n",
+      "\n",
+      "          [[8.4769e-03, 1.3063e-04, 3.4321e-04,  ..., 1.0522e-04,\n",
+      "            3.4556e-04, 6.5313e-03],\n",
+      "           [2.8515e-04, 1.9037e-06, 1.6836e-06,  ..., 2.7401e-06,\n",
+      "            3.9910e-06, 4.6338e-04],\n",
+      "           [2.4477e-04, 8.3888e-07, 4.6329e-07,  ..., 4.5637e-07,\n",
+      "            1.8487e-06, 2.0771e-04],\n",
+      "           ...,\n",
+      "           [8.3277e-04, 1.1342e-05, 1.5399e-05,  ..., 8.5311e-06,\n",
+      "            2.8042e-06, 1.6954e-04],\n",
+      "           [7.8822e-04, 7.2984e-06, 7.8863e-06,  ..., 4.1890e-06,\n",
+      "            2.1807e-06, 1.1210e-04],\n",
+      "           [1.2395e-02, 6.5203e-04, 5.8324e-04,  ..., 4.0754e-04,\n",
+      "            2.4145e-04, 6.6047e-03]]]]], device='cuda:0',\n",
+      "       grad_fn=<SigmoidBackward>)\n",
+      "num_clusters: 387\n",
+      "num_clusters: 414\n",
+      "num_clusters: 275\n",
+      "num_clusters: 577\n",
+      "num_clusters: 357\n",
+      "num_clusters: 404\n",
+      "num_clusters: 360\n",
+      "num_clusters: 432\n",
+      "num_clusters: 451\n",
+      "num_clusters: 387\n",
+      "num_clusters: 414\n",
+      "num_clusters: 275\n",
+      "num_clusters: 577\n",
+      "num_clusters: 357\n",
+      "num_clusters: 404\n",
+      "num_clusters: 360\n",
+      "num_clusters: 432\n",
+      "num_clusters: 451\n",
+      "[[1.         0.68640905 0.67070392 0.69804845 0.71661933 0.66081252\n",
+      "  0.65134768 0.71127847 0.72389674 1.         0.68640905 0.67070392\n",
+      "  0.69804845 0.71661933 0.66081252 0.65134768 0.71127847 0.72389674]\n",
+      " [0.68640905 1.         0.69163331 0.67396964 0.67435956 0.68860111\n",
+      "  0.70414582 0.73753909 0.74723853 0.68640905 1.         0.69163331\n",
+      "  0.67396964 0.67435956 0.68860111 0.70414582 0.73753909 0.74723853]\n",
+      " [0.67070392 0.69163331 1.         0.64118044 0.65238166 0.66771733\n",
+      "  0.72158561 0.70823146 0.71254355 0.67070392 0.69163331 1.\n",
+      "  0.64118044 0.65238166 0.66771733 0.72158561 0.70823146 0.71254355]\n",
+      " [0.69804845 0.67396964 0.64118044 1.         0.70876671 0.70617815\n",
+      "  0.62525941 0.68668748 0.66953601 0.69804845 0.67396964 0.64118044\n",
+      "  1.         0.70876671 0.70617815 0.62525941 0.68668748 0.66953601]\n",
+      " [0.71661933 0.67435956 0.65238166 0.70876671 1.         0.6677\n",
+      "  0.6332651  0.70327872 0.69636123 0.71661933 0.67435956 0.65238166\n",
+      "  0.70876671 1.         0.6677     0.6332651  0.70327872 0.69636123]\n",
+      " [0.66081252 0.68860111 0.66771733 0.70617815 0.6677     1.\n",
+      "  0.65228489 0.68804222 0.68218358 0.66081252 0.68860111 0.66771733\n",
+      "  0.70617815 0.6677     1.         0.65228489 0.68804222 0.68218358]\n",
+      " [0.65134768 0.70414582 0.72158561 0.62525941 0.6332651  0.65228489\n",
+      "  1.         0.72096919 0.71604775 0.65134768 0.70414582 0.72158561\n",
+      "  0.62525941 0.6332651  0.65228489 1.         0.72096919 0.71604775]\n",
+      " [0.71127847 0.73753909 0.70823146 0.68668748 0.70327872 0.68804222\n",
+      "  0.72096919 1.         0.7894617  0.71127847 0.73753909 0.70823146\n",
+      "  0.68668748 0.70327872 0.68804222 0.72096919 1.         0.7894617 ]\n",
+      " [0.72389674 0.74723853 0.71254355 0.66953601 0.69636123 0.68218358\n",
+      "  0.71604775 0.7894617  1.         0.72389674 0.74723853 0.71254355\n",
+      "  0.66953601 0.69636123 0.68218358 0.71604775 0.7894617  1.        ]\n",
+      " [1.         0.68640905 0.67070392 0.69804845 0.71661933 0.66081252\n",
+      "  0.65134768 0.71127847 0.72389674 1.         0.68640905 0.67070392\n",
+      "  0.69804845 0.71661933 0.66081252 0.65134768 0.71127847 0.72389674]\n",
+      " [0.68640905 1.         0.69163331 0.67396964 0.67435956 0.68860111\n",
+      "  0.70414582 0.73753909 0.74723853 0.68640905 1.         0.69163331\n",
+      "  0.67396964 0.67435956 0.68860111 0.70414582 0.73753909 0.74723853]\n",
+      " [0.67070392 0.69163331 1.         0.64118044 0.65238166 0.66771733\n",
+      "  0.72158561 0.70823146 0.71254355 0.67070392 0.69163331 1.\n",
+      "  0.64118044 0.65238166 0.66771733 0.72158561 0.70823146 0.71254355]\n",
+      " [0.69804845 0.67396964 0.64118044 1.         0.70876671 0.70617815\n",
+      "  0.62525941 0.68668748 0.66953601 0.69804845 0.67396964 0.64118044\n",
+      "  1.         0.70876671 0.70617815 0.62525941 0.68668748 0.66953601]\n",
+      " [0.71661933 0.67435956 0.65238166 0.70876671 1.         0.6677\n",
+      "  0.6332651  0.70327872 0.69636123 0.71661933 0.67435956 0.65238166\n",
+      "  0.70876671 1.         0.6677     0.6332651  0.70327872 0.69636123]\n",
+      " [0.66081252 0.68860111 0.66771733 0.70617815 0.6677     1.\n",
+      "  0.65228489 0.68804222 0.68218358 0.66081252 0.68860111 0.66771733\n",
+      "  0.70617815 0.6677     1.         0.65228489 0.68804222 0.68218358]\n",
+      " [0.65134768 0.70414582 0.72158561 0.62525941 0.6332651  0.65228489\n",
+      "  1.         0.72096919 0.71604775 0.65134768 0.70414582 0.72158561\n",
+      "  0.62525941 0.6332651  0.65228489 1.         0.72096919 0.71604775]\n",
+      " [0.71127847 0.73753909 0.70823146 0.68668748 0.70327872 0.68804222\n",
+      "  0.72096919 1.         0.7894617  0.71127847 0.73753909 0.70823146\n",
+      "  0.68668748 0.70327872 0.68804222 0.72096919 1.         0.7894617 ]\n",
+      " [0.72389674 0.74723853 0.71254355 0.66953601 0.69636123 0.68218358\n",
+      "  0.71604775 0.7894617  1.         0.72389674 0.74723853 0.71254355\n",
+      "  0.66953601 0.69636123 0.68218358 0.71604775 0.7894617  1.        ]]\n"
      ]
     },
     {
@@ -96,7 +200,7 @@
     "from IPython.display import SVG, display\n",
     "from mpl_toolkits.mplot3d import axes3d, Axes3D\n",
     "from generate import SuperGenerator\n",
-    "from evolution import mutate,benoulli,crossover,Evolution,normal,generate_candidate,cluster_graph\n",
+    "from evolution import mutate,benoulli,crossover,Evolution,normal,cluster_graph\n",
     "from utils import generate_z,slide\n",
     "from make_graph_nx import return_label\n",
     "G=SuperGenerator()\n",
@@ -272,6 +376,7 @@
     "zs=[]\n",
     "voxels1,voxels2=[],[]\n",
     "z=generate_z()\n",
+    "print(G.g_chair(z))\n",
     "zs.extend([generate_z() for i in range(9)])\n",
     "voxels1.extend([G.generate(zs[i],'Chair') for i in range(9)])\n",
     "voxels2.extend([G.generate(zs[i],'Chair') for i in range(9)])\n",
@@ -315,11 +420,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nG1=nx.Graph()\\nG1.add_nodes_from([0,1,2,3])\\nG1.add_edges_from([(0,1),(1,2),(0,3)])\\nnx.set_node_attributes(G1, {0:0, 1:0, 2:0,3:1}, \\'label\\')\\nG1.add_node(4,label=2)\\nprint(G1.nodes[4][\\'label\\'])\\nG=[G1]\\nG_grakel=grakel.graph_from_networkx(G, node_labels_tag=\\'label\\')\\ngk=grakel.WeisfeilerLehman()\\nK=gk.fit_transform(G_grakel)\\nprint(K)\\n\\n\\nzs=[]\\nvoxels=[]\\nn=10\\nfor i in range(n):\\n    z,voxel=z_and_Gz(G)\\n    zs.append(z)\\n    voxels.append(voxel)\\n#zs,voxels=scatter_z_and_Gz(G,n)\\n\\ndistances=vec_dis(zs,n).flatten()\\nK,trimed_voxels,_=WeisfeilerLehman(voxels,n,30)\\ncoords_base_sim_oneline=coords_based_sim(voxels,n).flatten()\\nK_oneline=np.array(K).flatten()\\nsave_voxels(voxels,n,\"notrim\")\\nsave_voxels(trimed_voxels,n)\\nscatter_viz(distances,coords_base_sim_oneline,K_oneline)\\n\\nz,voxel=z_and_Gz(G)\\nvoxel_slided=slide(voxel,1)\\nK,_,_=WeisfeilerLehman([voxel,voxel_slided],2,5)\\nprint(K)\\n'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\n",
     "'''\n",
@@ -362,18 +478,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "num_clusters: 446\n",
+      "num_clusters: 735\n",
+      "num_clusters: 266\n",
+      "num_clusters: 246\n",
+      "num_clusters: 364\n",
+      "num_clusters: 317\n",
+      "num_clusters: 479\n",
+      "num_clusters: 262\n",
+      "num_clusters: 367\n",
+      "num_clusters: 357\n",
+      "[[1.         0.71515395 0.66968706 0.70130808 0.72933707 0.71231562\n",
+      "  0.73359059 0.64427754 0.71422049 0.71711437]\n",
+      " [0.71515395 1.         0.60142595 0.62846126 0.708496   0.67916247\n",
+      "  0.7157915  0.54134704 0.64200366 0.64813714]\n",
+      " [0.66968706 0.60142595 1.         0.58792321 0.63690672 0.62327506\n",
+      "  0.62634458 0.65746499 0.64607141 0.65023673]\n",
+      " [0.70130808 0.62846126 0.58792321 1.         0.69268732 0.67741922\n",
+      "  0.6821489  0.57690759 0.67497524 0.68816504]\n",
+      " [0.72933707 0.708496   0.63690672 0.69268732 1.         0.70800212\n",
+      "  0.71767378 0.581484   0.68201042 0.69923504]\n",
+      " [0.71231562 0.67916247 0.62327506 0.67741922 0.70800212 1.\n",
+      "  0.6882929  0.60587777 0.70119716 0.73058846]\n",
+      " [0.73359059 0.7157915  0.62634458 0.6821489  0.71767378 0.6882929\n",
+      "  1.         0.59341364 0.67477012 0.69119294]\n",
+      " [0.64427754 0.54134704 0.65746499 0.57690759 0.581484   0.60587777\n",
+      "  0.59341364 1.         0.65575538 0.65229373]\n",
+      " [0.71422049 0.64200366 0.64607141 0.67497524 0.68201042 0.70119716\n",
+      "  0.67477012 0.65575538 1.         0.7530865 ]\n",
+      " [0.71711437 0.64813714 0.65023673 0.68816504 0.69923504 0.73058846\n",
+      "  0.69119294 0.65229373 0.7530865  1.        ]]\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "voxels=[]\n",
     "n=10\n",
     "load_file_data(voxels,n)\n",
-    "voxels32=maxpool(voxels,2)\n",
-    "voxels16=maxpool(voxels,8)\n",
-    "#K32,trimed_voxels32,G32=WeisfeilerLehman(voxels,n,3,32)\n",
-    "K16,trimed_voxels16,G16=WeisfeilerLehman(voxels16,n,3,8)\n",
+    "graphs=cluster_graph(torch.Tensor(voxels))\n",
+    "G_grakel=grakel.graph_from_networkx(graphs, node_labels_tag='label')\n",
+    "gk=grakel.WeisfeilerLehman(n_iter=cfg.n_iter,normalize=True)\n",
+    "K,base_kernel=gk.fit_transform(G_grakel)\n",
+    "print(K)\n",
     "\n",
     "#print(coords_based_sim(voxels,n))\n",
     "#print(K)\n",
